--- a/pages/menu_1.html
+++ b/pages/menu_1.html
@@ -10,13 +10,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=roboto">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=shrikhand">
 </head>
 <body>
     <header>
         <div class="toppage">
-            <div>
+            <a href="/index.html">
                 <i class="fa-sharp fa-solid fa-arrow-left"></i>
-            </div>
+            </a>
             <div class="logo"> 
                 <img src="/assets/images/logo/ohmyfood.png">
             </div>
@@ -29,15 +30,15 @@
             </div>
             <div class="all-menu">
                 <div class="menu">
-                    <div>
-                        <h1>Le délice des sens</h1>
+                    <div class="menu-titre">
+                        <h1>La palette du goût</h1>
                     </div>
                     <div>
                         <i class="fa-regular fa-heart"></i>
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-sous-titre">
                         <h2>Entrées</h2>
                     </div>
                     <div class="menu-cards">
@@ -46,125 +47,122 @@
                                 <h2>Tartare e thon</h2>
                                 <p>Assaisonné au yuzu</p>
                             </div>
-                            <div>
+                            <div class="prix">
                                 <p>25€</p>
                             </div>
-                            <div>
+                            <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                         <div class="card-solo">
-                            <div>
+                            <div class="secleft">
                                 <h2>Tartare e thon</h2>
                                 <p>Assaisonné au yuzu</p>
                             </div>
-                            <div>
+                            <div class="prix">
                                 <p>25€</p>
                             </div>
-                            <div>
+                            <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                         <div class="card-solo">
-                            <div>
+                            <div class="secleft">
                                 <h2>Tartare e thon</h2>
                                 <p>Assaisonné au yuzu</p>
                             </div>
-                            <div>
+                            <div class="prix">
                                 <p>25€</p>
                             </div>
-                            <div>
+                            <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu-sous-titre">
                         <h2>Plats</h2>
                     </div>
                     <div class="menu-cards">
                         <div class="card-solo">
-                            <div>
+                            <div class="secleft">
                                 <h2>Tartare e thon</h2>
                                 <p>Assaisonné au yuzu</p>
                             </div>
-                            <div>
+                            <div class="prix">
                                 <p>25€</p>
                             </div>
-                            <div>
+                            <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                         <div class="card-solo">
-                            <div>
+                            <div class="secleft">
                                 <h2>Tartare e thon</h2>
                                 <p>Assaisonné au yuzu</p>
                             </div>
-                            <div>
+                            <div class="prix">
                                 <p>25€</p>
                             </div>
-                            <div>
+                            <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                         <div class="card-solo">
-                            <div>
+                            <div class="secleft">
                                 <h2>Tartare e thon</h2>
                                 <p>Assaisonné au yuzu</p>
                             </div>
-                            <div>
+                            <div class="prix">
                                 <p>25€</p>
                             </div>
-                            <div>
+                            <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="menu-sous-titre">
                         <h2>Desserts</h2>
                     </div>
                     <div class="menu-cards">
                         <div class="card-solo">
-                            <div>
+                            <div class="secleft">
                                 <h2>Tartare e thon</h2>
                                 <p>Assaisonné au yuzu</p>
                             </div>
-                            <div>
+                            <div class="prix">
                                 <p>25€</p>
                             </div>
-                            <div>
+                            <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                         <div class="card-solo">
-                            <div>
+                            <div class="secleft">
                                 <h2>Tartare e thon</h2>
                                 <p>Assaisonné au yuzu</p>
                             </div>
-                            <div>
+                            <div class="prix">
                                 <p>25€</p>
                             </div>
-                            <div>
+                            <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                         <div class="card-solo">
-                            <div>
+                            <div class="secleft">
                                 <h2>Tartare e thon</h2>
                                 <p>Assaisonné au yuzu</p>
                             </div>
-                            <div>
+                            <div class="prix">
                                 <p>25€</p>
                             </div>
-                            <div>
+                            <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                         <div class="btn-con">
-                            <a href="#">
-                                <div class="btn">
-                                    <h2>Commander</h2>
-                                </div>
-                            </a>
+                            <a class="btn" href="#">Commander</a>
+
                         </div>
                     </div>    
                 </div>
@@ -185,8 +183,10 @@
                     <div><i class="fa-solid fa-handshake-angle"></i></div>
                     <a href="#">Devenir partenaire</a>
                 </div>
-                <a href="#">Mentions légales</a><br>
-                <a href="#">contact</a> 
+                <div class="footerlink3">
+                    <a href="#">Mentions légales</a><br>
+                    <a href="#">contact</a>
+                </div> 
             </div>
         </div>
     </footer>
