--- a/pages/menu_3.html
+++ b/pages/menu_3.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <div class="toppage">
-            <div>
+            <a href="/index.html">
                 <i class="fa-sharp fa-solid fa-arrow-left"></i>
-            </div>
+            </a>
             <div class="logo"> 
                 <img src="/assets/images/logo/ohmyfood.png">
             </div>
@@ -26,7 +26,7 @@
     <main>
         <section class="all">
             <div class="image-principal">
-                <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
             </div>
             <div class="all-menu">
                 <div class="menu">
@@ -177,7 +177,7 @@
             <div class="footerLogo">
                 <img src="/assets/images/logo/ohmyfoodwhite.svg">
             </div>
-            <div>
+            <div class="allFooterLink">
                 <div class="footerlink1">
                     <div><i class="fa-solid fa-utensils"></i></div>
                     <a href="#">Proposer un restaurant</a>
@@ -186,8 +186,10 @@
                     <div><i class="fa-solid fa-handshake-angle"></i></div>
                     <a href="#">Devenir partenaire</a>
                 </div>
-                <a href="#">Mentions légales</a><br>
-                <a href="#">contact</a> 
+                <div class="footerlink3">
+                    <a href="#">Mentions légales</a><br>
+                    <a href="#">contact</a>
+                </div> 
             </div>
         </div>
     </footer>
