--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         </a>
                     </article>
                     <article class="sectionBtnResto">
-                        <a href="#">
+                        <a href="/pages/menu_2.html">
                             <div class="cards-resto">
                                 <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
                                 <div class="new2">
@@ -135,7 +135,7 @@
                 </div>
                 <div class="allBtnCardDown">    
                     <article class="sectionBtnResto">
-                        <a href="#">
+                        <a href="/pages/menu_3.html">
                             <div class="cards-resto">
                                 <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
                                 
@@ -154,7 +154,7 @@
                         </a>
                     </article>
                     <article class="sectionBtnResto">
-                        <a href="#">
+                        <a href="/pages/menu_4.html">
                             <div class="cards-resto">
                                 <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
                                 
