--- a/pages/menu_1.html
+++ b/pages/menu_1.html
@@ -44,8 +44,8 @@
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Fricassée d'escargots</h2>
+                                <p>Au piment d'Espelette </p>
                             </div>
                             <div class="prix">
                                 <p>25€</p>
@@ -56,11 +56,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Foie gras de canard mi-cuit</h2>
+                                <p>Et ses copeaux de truffe noire</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>35€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -68,11 +68,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Œuf au plat</h2>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>20€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -85,11 +85,11 @@
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Filet de bœuf aux herbes</h2>
+                                <p>Accompagné de sa ribambelle de légumes</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>40€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -97,11 +97,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Parmentier de queue de bœuf</h2>
+                                <p>À la truffe noire sur sa purée de panais</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>35€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -109,11 +109,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Filet de turbot</h2>
+                                <p>Aux agrumes</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>44€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -126,11 +126,11 @@
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Paris-Brest</h2>
+                                <p>Revisité</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>18€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -138,11 +138,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Macaron au chocolat d'exception </h2>
+                                <p>Et glace à la vanille de Madagascar</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>22€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -150,11 +150,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Mousse au chocolat </h2>
+                                <p>Au piment d'Espelette et à la truffe noire</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>23€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -174,7 +174,7 @@
             <div class="footerLogo">
                 <img src="/assets/images/logo/ohmyfoodwhite.svg">
             </div>
-            <div>
+            <div class="allFooterLink">
                 <div class="footerlink1">
                     <div><i class="fa-solid fa-utensils"></i></div>
                     <a href="#">Proposer un restaurant</a>
@@ -189,6 +189,6 @@
                 </div> 
             </div>
         </div>
-    </footer>
+    </footer>   
 </body>
 </html>
