--- a/pages/menu_2.html
+++ b/pages/menu_2.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <div class="toppage">
-            <div>
+            <a href="/index.html">
                 <i class="fa-sharp fa-solid fa-arrow-left"></i>
-            </div>
+            </a>
             <div class="logo"> 
                 <img src="/assets/images/logo/ohmyfood.png">
             </div>
@@ -26,7 +26,7 @@
     <main>
         <section class="all">
             <div class="image-principal">
-                <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
             </div>
             <div class="all-menu">
                 <div class="menu">
@@ -56,11 +56,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Bouchée de homard croustillant </h2>
+                                <p>Et sa farandole de petits légumes</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>35€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -68,11 +68,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Poulet rôti aux herbes de Provence </h2>
+                                <p>Et sa crème de truffe</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>40€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -85,11 +85,11 @@
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Poulet rôti aux herbes de Provence </h2>
+                                <p>Et sa crème de truffe</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>40€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -97,11 +97,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Langouste rôtie </h2>
+                                <p>Et ses légumes de saison</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>35€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -109,11 +109,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Côte de bœuf Angus</h2>
+                                <p>Et sa purée de panais</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>44€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -126,11 +126,11 @@
                     <div class="menu-cards">
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Farandole de desserts</h2>
+                                <p>Du chef</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>18€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -138,11 +138,11 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Crème brulée </h2>
+                                <p>Revisitée</p>
                             </div>
                             <div class="prix">
-                                <p>25€</p>
+                                <p>22€</p>
                             </div>
                             <div class="valide">
                                 <i class="fa-solid fa-circle-check"></i>
@@ -150,8 +150,8 @@
                         </div>
                         <div class="card-solo">
                             <div class="secleft">
-                                <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <h2>Tiramisu </h2>
+                                <p>À la noisette</p>
                             </div>
                             <div class="prix">
                                 <p>25€</p>
@@ -177,7 +177,7 @@
             <div class="footerLogo">
                 <img src="/assets/images/logo/ohmyfoodwhite.svg">
             </div>
-            <div>
+            <div class="allFooterLink">
                 <div class="footerlink1">
                     <div><i class="fa-solid fa-utensils"></i></div>
                     <a href="#">Proposer un restaurant</a>
@@ -186,8 +186,10 @@
                     <div><i class="fa-solid fa-handshake-angle"></i></div>
                     <a href="#">Devenir partenaire</a>
                 </div>
-                <a href="#">Mentions légales</a><br>
-                <a href="#">contact</a> 
+                <div class="footerlink3">
+                    <a href="#">Mentions légales</a><br>
+                    <a href="#">contact</a>
+                </div> 
             </div>
         </div>
     </footer>
